package ar.edu.utn.ba.ddsi.smartlife.security_service.models.entities;

public enum TipoDeEvento {
    ROBO,
    INCENDIO,
    FUGA_DE_GAS,
    TENSION_BAJA
}
